--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-target/
 .idea/
+target/classes
+target/generated-sources
+target/generated-test-souces
+target/maven-archiver
+target/maven-status
+target/surefire-reports
+target/test-classes
